# comet-api

./: .gitignore  .pylintrc  .ruff.toml  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: code-quality.yaml  update-docs.yaml
alembic/: env.py
app/: auth.py  config.py  db.py  main.py  utils.py
app/admin/: router.py
app/applicants/: models.py  router.py  schemas.py  services.py
app/cases/: models.py  router.py  schemas.py  services.py
app/health/: router.py
app/midas/: router.py
app/spacecraft/: models.py  router.py  schemas.py  services.py
app/users/: models.py  router.py  schemas.py  services.py
docs/: index.html  openapi.json  openapi.yaml  redoc-static.html
migrations/: README  README.md  env.py
tests/: conftest.py  test_admin.py  test_applicants.py  test_cases.py  test_health.py  test_spacecraft.py  test_users.py  test_utils.py
